[gd_scene load_steps=17 format=2]

[ext_resource path="res://coin.gd" type="Script" id=1]
[ext_resource path="res://assets/Original/Tileset [Levels]/Objects/Animated_Objects/Coin/Coin_4.png" type="Texture" id=2]
[ext_resource path="res://assets/Original/Tileset [Levels]/Objects/Animated_Objects/Coin/Coin_5.png" type="Texture" id=3]
[ext_resource path="res://assets/Original/Tileset [Levels]/Objects/Animated_Objects/Coin/Coin_6.png" type="Texture" id=4]
[ext_resource path="res://assets/Original/Tileset [Levels]/Objects/Animated_Objects/Coin/Coin_7.png" type="Texture" id=5]
[ext_resource path="res://assets/Original/Tileset [Levels]/Objects/Animated_Objects/Coin/Coin_10.png" type="Texture" id=6]
[ext_resource path="res://assets/Original/Tileset [Levels]/Objects/Animated_Objects/Coin/Coin_12.png" type="Texture" id=7]
[ext_resource path="res://assets/Original/Tileset [Levels]/Objects/Animated_Objects/Coin/Coin_8.png" type="Texture" id=8]
[ext_resource path="res://assets/Original/Tileset [Levels]/Objects/Animated_Objects/Coin/Coin_1.png" type="Texture" id=9]
[ext_resource path="res://assets/Original/Tileset [Levels]/Objects/Animated_Objects/Coin/Coin_9.png" type="Texture" id=10]
[ext_resource path="res://assets/Original/Tileset [Levels]/Objects/Animated_Objects/Coin/Coin_2.png" type="Texture" id=11]
[ext_resource path="res://assets/Original/Tileset [Levels]/Objects/Animated_Objects/Coin/Coin_3.png" type="Texture" id=12]
[ext_resource path="res://assets/Original/Tileset [Levels]/Objects/Animated_Objects/Coin/Coin_11.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 9.16041, 10.2864 )

[sub_resource type="Animation" id=20]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="coin" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="look" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "idle"
frame = 8
playing = true

[node name="coin_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="coin_box"]
position = Vector2( 5.96046e-08, 0 )
scale = Vector2( 0.545827, 0.545827 )
shape = SubResource( 19 )

[node name="dead_time" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="fade" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 20 )

[connection signal="area_entered" from="coin_box" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="dead_time" to="." method="_on_dead_time_timeout"]
